Z-indexing added to sections.

--- a/html/index.html
+++ b/html/index.html
@@ -28,14 +28,14 @@
 <body>
   <canvas id="canvas"></canvas>
 
-    <h3 style="opacity: 0.5;"><span id='date'></span></h3>
+    <h3 style="opacity: 0.5;"><span id="date"></span></h3>
 
   <section id="MainView">
     <div class="row animate__animated animate__bounceInRight" style="animation-duration: 4s">
       <div class="col-lg-6 m-md-auto m-sm-auto">
         <h1 class="MainText MainHeading" style="color: #864879">Hello,</h1>
         <br />
-        <h3 class="MainText MainHeading">I am Sankalp</h3>
+        <h3 class="MainText MainHeading">I am Sankalp.</h3>
         <p class="MainText subText">Programmer and Developer</p>
         <p class="MainText">
           If you want to talk about developing cool apps and web sites the
