--- a/html/project.html
+++ b/html/project.html
@@ -87,10 +87,10 @@
          
     </section> -->
 
-    <section id="app">
+    <section id="app" class="z-0">
        <div class="row">
            <div class="col-lg-6">
-               <div class="appText shadow-lg rounded-lg h-18 animate-pulse">
+               <div class="appText shadow-lg rounded-lg h-18">
                    <h1 class="AppHeading">BEVERAGES</h1>
                    <p class="appSubtext">-Buillt using swift</p>
                    <p class="appSubtext">-Hot beverage ordering app.</p>
@@ -167,7 +167,7 @@
  </section>
  </section>
 
- <section id="WebProjects">
+ <section id="WebProjects" class="z-20">
     <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_hntzYU.json"  background="transparent" speed="1.5" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
     <h1 class="J animate__animated animate__bounceInLeft">WEB DESIGN</h1>
     <h1 class="J animate__animated animate__bounceInLeft">AND</h1>
@@ -215,33 +215,35 @@
      
  </section>
 
- <section id="database">
+ <section id="database" class="z-40">
 
     <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_qp1q7mct.json"  background="transparent" speed="1.5" style="width: 220px; height: 220px;" loop autoplay></lottie-player>
     <h1 class="J">DATABASE</h1>
       <div class="row">
           <div class="col-lg-6">
             <div class="appText shadow-md rounded-lg h-18">
-                <h1 class="AppHeading">PORTFOLIO</h1>
-                <p class="appSubtext">-My Portfolio web design.</p>
-                <p class="appSubtext">-Buillt using html , css and javascript.</p>
-                <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
+                <h1 class="AppHeading">ONLINE SHOP INVENTORY</h1>
+                <p class="appSubtext">-Built using sql.</p>
+                <p class="appSubtext">-This is an online inventory database.</p>
+                <p class="appSubtext">-This database is designed to demonstarte all the types of query that can be written in sql.</p>
+                <p class="appSubtext">-Ongoing project.</p>
                 <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
           </div>
       </div>
       <div class="col-lg-6">
         <div class="appText shadow-md rounded-lg h-18">
-            <h1 class="AppHeading">PORTFOLIO</h1>
-            <p class="appSubtext">-My Portfolio web design.</p>
-            <p class="appSubtext">-Buillt using html , css and javascript.</p>
-            <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
+            <h1 class="AppHeading">LIBRARY DATABASE</h1>
+            <p class="appSubtext">-Built using sql.</p>
+            <p class="appSubtext">-Inclues database which can be used by library.</p>
+            <p class="appSubtext">-This is a college project where we are developing library app where I handled the backend database part.</p>
+            <p class="appSubtext">-Ongoing project.</p>
             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
       </div>
   </div>
       </div>
  </section>
  
- <section id="other">
+ <section id="other" class="z-50">
 
             <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_9lbddvut.json"  background="transparent" speed="1.5" style="width: 220px; height: 220px;" loop autoplay></lottie-player>
             <h1 class="J animate__animated animate__bounceInRight">OTHER PROJECTS</h1>
@@ -294,7 +296,7 @@
             </div>
  </section>
 
- <section id="ConnectSection">
+ <section id="ConnectSection" class="z-50">
    <centre>
     <h1 class="EndText animate__animated animate__bounceInRight">STAY CONNECTED</h1>
    </centre>
