Links added for the project.

--- a/html/index.html
+++ b/html/index.html
@@ -20,19 +20,18 @@
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="../js/scroll.js"></script>
 
 
 
 </head>
 
 <body>
+
   <canvas id="canvas"></canvas>
-
-    <h3 style="opacity: 0.5;"><span id="date"></span></h3>
-
   <section id="MainView">
     <div class="row animate__animated animate__bounceInRight" style="animation-duration: 4s">
-      <div class="col-lg-6 m-md-auto m-sm-auto">
+      <div class="col-lg-6">
         <h1 class="MainText MainHeading" style="color: #864879">Hello,</h1>
         <br />
         <h3 class="MainText MainHeading">I am Sankalp.</h3>
@@ -58,12 +57,14 @@
             <a href="https://www.linkedin.com/in/sankalp-pandey-688a28223/">CONNECT</a>
           </button>
         </div>
-      </div>
-      <div class="col-lg-6 sm\:auto-cols-auto">
+        </div>
+    
+      <div class="col-lg-6">
         <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_crm7f2hm.json" class="lottie"
           background="transparent" speed="1" style="width: 600px; height: 600px" loop autoplay></lottie-player>
       </div>
     </div>
+
   </section>
 
   <section id="MidView" data-aos="fade-right" data-aos-duration="3000" data-aos-easing="linear">
@@ -152,6 +153,7 @@
               <p class="pText" style="text-align: center">- NODEMON</p>
               <p class="pText" style="text-align: center">- TERMINAL</p>
               <p class="pText" style="text-align: center">- HEROKU</p>
+              <p class="pText" style="text-align: center">- MONGO DB</p>
             </div>
             <div class="col-lg-6">
               <p class="pText" style="text-align: center">- FIREBASE</p>
@@ -160,6 +162,7 @@
               <p class="pText" style="text-align: center">- BOOTSTRAP</p>
               <p class="pText" style="text-align: center">- TAILWIND</p>
               <p class="pText" style="text-align: center">- EJS</p>
+           
             </div>
           </div>
         </div>
