Animation error fixed.

--- a/html/project.html
+++ b/html/project.html
@@ -205,7 +205,7 @@
             </div>
  </section>
 
- <section id="ConnectSection" class="z-50 animate__animated animate__bounceInRight">
+ <section id="ConnectSection" class="z-50" data-aos="fade-right" data-aos-duration="3000" data-aos-ease="linear">
    <centre>
     <h1 class="EndText animate__animated animate__bounceInRight">STAY CONNECTED</h1>
    </centre>
