Code refactored , comment added.

--- a/html/index.html
+++ b/html/index.html
@@ -18,17 +18,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- Lottie file linked. -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <!-- Jquery linked. -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Aos library linked.  -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- Scroll.js linked. -->
   <script src="../js/scroll.js"></script>
 
-
-
 </head>
-
 <body>
 
+  <!-- Canvas tag for background animation. -->
   <canvas id="canvas"></canvas>
+  <!--Main view section -: -->
   <section id="MainView">
     <div class="row animate__animated animate__bounceInRight" style="animation-duration: 4s">
       <div class="col-lg-6">
@@ -66,6 +68,8 @@
     </div>
 
   </section>
+  
+  <!-- Mid view section -: -->
 
   <section id="MidView" data-aos="fade-right" data-aos-duration="3000" data-aos-easing="linear">
     <div class="
@@ -97,6 +101,8 @@
       </div>
     </div>
   </section>
+ 
+  <!-- MidOneView section -: -->
 
   <section id="MidOneView" style="text-align: center" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="3000">
     <div class="
@@ -132,6 +138,8 @@
       </div>
     </div>
   </section>
+  
+   <!-- MidTwoView section -: -->
 
   <section id="MidTwoView" data-aos="fade-right" data-aos-duration="3000" data-aos-easing="linear">
     <div class="
@@ -175,6 +183,8 @@
     </div>
   </section>
 
+  <!-- MidOneView section repeated inorder to redude the redundant code -: -->
+
   <section id="MidOneView" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="3000">
     <div class="
           MidOneView
@@ -215,6 +225,8 @@
       </div>
     </div>
   </section>
+
+  <!-- MidView section repeated again inorder to reduce the redundant code -: -->
 
   <section id="MidView" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="3000">
     <div class="
@@ -262,6 +274,8 @@
       </div>
     </div>
   </section>
+ 
+ <!-- Connect with me section for my social media profiles -:-->
 
   <section id="ConnectSection" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="3000">
     <h1 class="EndText animate__animated animate__bounceInRight">
@@ -280,11 +294,18 @@
       <a href="https://www.linkedin.com/in/sankalp-pandey-688a28223/"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
   </section>
+
+  <!-- Canvas.js file linked -: -->
   <script src="../js/canvas.js"></script>
+  <!-- Scroll.js file linked -:-->
   <script src="../js/scroll.js"></script>
+  <!-- Font awesome added -:-->
   <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
+  <!-- Jquery script added -:-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Aos libaray linked -:-->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!-- Function for Aos linked -:-->
   <script>
     AOS.init();
   </script>
