Comments added for the project.html

--- a/html/project.html
+++ b/html/project.html
@@ -5,19 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <!-- Styles.css linked -: -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Bootstrap linked -: -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Tailwind linked -: -->
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Animate.css linked -: -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Aos library added -: -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Lottie file linked -: -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
+
+    <!-- Canvas added for the animation -: -->
     <canvas id="canvas"></canvas>
+
+    <!-- Project title section -:-->
+
     <h1 class="ProjectTitle animate__animated animate__bounceInLeft">MY PROJECTS</h1>
     <section id="WelcomeSection">
         <div class="WelcomeSection">
             <lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_Twfrj1.json"  background="transparent" speed="1.5" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
+   
+    <!-- App project section -:-->
 
     <section id="app" class="z-0">
        <div class="row" data-aos="fade-left" data-aos-ease="linear" data-aos-duration="3000">
@@ -100,6 +113,8 @@
  </section>
  </section>
 
+ <!-- Web project section added -: -->
+
  <section id="WebProjects" class="z-20">
     <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_hntzYU.json"  background="transparent" speed="1.5" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
     <h1 class="J animate__animated animate__bounceInRight">WEB DESIGN</h1>
@@ -145,8 +160,9 @@
       </div>
   </div>
  </div>
-     
- </section>
+</section>
+
+<!-- Database section added -:-->
 
  <section id="database" class="z-40">
 
@@ -175,6 +191,8 @@
   </div>
       </div>
  </section>
+
+ <!-- Other project added -: -->
  
  <section id="other" class="z-50">
 
@@ -205,6 +223,8 @@
             </div>
  </section>
 
+ <!-- Social Media section added -: --> 
+
  <section id="ConnectSection" class="z-50" data-aos="fade-right" data-aos-duration="3000" data-aos-ease="linear">
    <centre>
     <h1 class="EndText animate__animated animate__bounceInRight">STAY CONNECTED</h1>
@@ -219,13 +239,17 @@
         <a href="https://www.instagram.com/sankalp_.10/"><i class="fab fa-instagram fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/sankalp-pandey-688a28223/"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
-    
 </section>
 
+<!-- Font awesome kit added -: -->
 <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
+<!-- Canvas.js file for the animation added -: -->
 <script src="../js/canvas.js"></script>
+<!-- Scroll.js for scroll added -: -->
 <script src="../js/scroll.js"></script>
+<!-- Aos library added -: -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<!-- Scroll function added -: -->
 <script>
     AOS.init();
 </script>
