Links for the projects added.

--- a/html/project.html
+++ b/html/project.html
@@ -127,7 +127,7 @@
                 <p class="appSubtext">-Wed design for a coffee bean providing company.</p>
                 <p class="appSubtext">-Built using html and css.</p>
                 <p class="appSubtext">-Includes bootstrap as framework.</p>
-                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/CoffeeBeans">here</a></strong>.</p>
             </div>
         </div>
         <div class="col-lg-6">
@@ -136,18 +136,19 @@
              <p class="appSubtext">-Sneaker store website design.</p>
              <p class="appSubtext">-Buillt using html and css.</p>
              <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
-             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
          </div>
      </div>
     </div>
     <div class="row" data-aos="fade-left" data-aos-ease="linear" data-aos-duration="3000">
      <div class="col-lg-6">
          <div class="appText shadow-md rounded-lg h-18">
-             <h1 class="AppHeading">NETFLIX WEB UI</h1>
-             <p class="appSubtext">-Buillt using html and css.</p>
-             <p class="appSubtext">-Includes tailwind and bootstrap as framewoks.</p>
-             <p class="appSubtext">-Currently , it's an ongoing project.</p>
-             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+             <h1 class="AppHeading">WEATHER SPY</h1>
+             <p class="appSubtext">-A complete weather app with live information.</p>
+             <p class="appSubtext">-Built using html,css,js and ejs.</p>
+             <p class="appSubtext">-Backend built using node.js,express.js.</p>
+             <p class="appSubtext">-Web app deployed on heroku.</p>
+             <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/WeatherApp">here</a></strong>.</p>
          </div>
      </div>
      <div class="col-lg-6">
@@ -155,8 +156,9 @@
           <h1 class="AppHeading">PORTFOLIO</h1>
           <p class="appSubtext">-My Portfolio web design.</p>
           <p class="appSubtext">-Buillt using html , css and javascript.</p>
-          <p class="appSubtext">-Includes tailwind , bootstrap , node.js and express.js as framework.</p>
-          <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+          <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
+          <p class="appSubtext">-Backend built using node.js,express.js.</p>
+          <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/PersonalPortfolio">here</a></strong>.</p>
       </div>
   </div>
  </div>
@@ -176,7 +178,7 @@
                 <p class="appSubtext">-This is an online inventory database.</p>
                 <p class="appSubtext">-This database is designed to demonstarte all the types of query that can be written in sql.</p>
                 <p class="appSubtext">-Ongoing project.</p>
-                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+                <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/OnlineInventoryDatabase">here</a></strong>.</p>
           </div>
       </div>
       <div class="col-lg-6">
@@ -186,7 +188,7 @@
             <p class="appSubtext">-Inclues database which can be used by library.</p>
             <p class="appSubtext">-This is a college project where we are developing library app where I handled the backend database part.</p>
             <p class="appSubtext">-Ongoing project.</p>
-            <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+            <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/LibraryDatabase">here</a></strong>.</p>
       </div>
   </div>
       </div>
@@ -206,7 +208,7 @@
                         <p class="appSubtext">-Implenented in c++ langauge.</p>
                         <p class="appSubtext">-Includes data structures and algorithim.</p>
                         <p class="appSubtext">-This repository is upadted at weekend.</p>
-                        <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong>.</p>
+                        <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/DSA">here</a></strong>.</p>
 
                     </div>
                 </div>
@@ -217,7 +219,7 @@
                      <p class="appSubtext">-Complete demo of gym facalities.</p>
                      <p class="appSubtext">-Includes Object orientated programming.</p>
                      <p class="appSubtext">-Include various option for the user.</p>
-                     <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="">here</a></strong> </p>
+                     <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/GYMBAR">here</a></strong> </p>
                  </div>
              </div>
             </div>
