--- a/html/index.html
+++ b/html/index.html
@@ -129,9 +129,9 @@
               <p class="pText">SHELL</p>
             </div>
             <div class="col-lg-6">
-              <p class="pText">-HTML</p>
-              <p class="pText">-CSS</p>
-              <p class="pText">-JAVASCRIPT</p>
+              <p class="pText">HTML</p>
+              <p class="pText">CSS</p>
+              <p class="pText">JAVASCRIPT</p>
             </div>
           </div>
         </div>
