--- a/html/index.html
+++ b/html/index.html
@@ -131,6 +131,7 @@
                 <p class="pText">HTML</p>
                 <p class="pText">CSS</p>
                 <p class="pText">JAVASCRIPT</p>
+                <p class="pText">R LANGUAGE</p>
               </div>
             </div>
           </div>
@@ -161,6 +162,7 @@
                 <p class="pText" style="text-align: center">- TERMINAL</p>
                 <p class="pText" style="text-align: center">- HEROKU</p>
                 <p class="pText" style="text-align: center">- MONGO DB</p>
+                <p class="pText" style="text-align: center">- ROBO 3T</p>
               </div>
               <div class="col-lg-6">
                 <p class="pText" style="text-align: center">- FIREBASE</p>
@@ -169,6 +171,8 @@
                 <p class="pText" style="text-align: center">- BOOTSTRAP</p>
                 <p class="pText" style="text-align: center">- TAILWIND</p>
                 <p class="pText" style="text-align: center">- EJS</p>
+                <p class="pText" style="text-align: center">- POSTMAN</p>
+                <p class="pText" style="text-align: center">- MOONGOSE</p>
              
               </div>
             </div>
