Docker added , plus design improved.

--- a/html/index.html
+++ b/html/index.html
@@ -154,27 +154,12 @@
           <div class="col-lg-6">
             <h1 class="HeadingText" style="text-align: center">FRAMEWORKS</h1>
             <div class="row">
-              <div class="col-lg-6">
-                <p class="pText" style="text-align: center">- JQUERY</p>
-                <p class="pText" style="text-align: center">- NODE.JS</p>
-                <p class="pText" style="text-align: center">- EXPRESS.JS</p>
-                <p class="pText" style="text-align: center">- NODEMON</p>
-                <p class="pText" style="text-align: center">- TERMINAL</p>
-                <p class="pText" style="text-align: center">- HEROKU</p>
-                <p class="pText" style="text-align: center">- MONGO DB</p>
-                <p class="pText" style="text-align: center">- ROBO 3T</p>
-              </div>
-              <div class="col-lg-6">
-                <p class="pText" style="text-align: center">- FIREBASE</p>
-                <p class="pText" style="text-align: center">- REALM</p>
-                <p class="pText" style="text-align: center">- XCODE</p>
-                <p class="pText" style="text-align: center">- BOOTSTRAP</p>
-                <p class="pText" style="text-align: center">- TAILWIND</p>
-                <p class="pText" style="text-align: center">- EJS</p>
-                <p class="pText" style="text-align: center">- POSTMAN</p>
-                <p class="pText" style="text-align: center">- MOONGOSE</p>
-             
-              </div>
+
+                <p class="pText" style="text-align: center">- JQUERY , NODE.JS , EXPRESS.JS , NODEMON</p>
+                <p class="pText" style="text-align: center">- HEROKU , MONGO DB , ROBO 3T , DOCKER</p>
+                <p class="pText" style="text-align: center">- FIREBASE , REALM , XCODE , BOOTSTRAP</p>
+                <p class="pText" style="text-align: center">- TAILWIND , EJS , POSTMAN , MONGOOSE</p>
+
             </div>
           </div>
           <div class="col-lg-6">
