--- a/html/project.html
+++ b/html/project.html
@@ -129,6 +129,7 @@
                 <p class="appSubtext">-Built using html and css.</p>
                 <p class="appSubtext">-Includes bootstrap as framework.</p>
                 <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/CoffeeBeans">here</a></strong>.</p>
+                <p class="appSubtext">-Live server deployed <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
             </div>
         </div>
         <div class="col-lg-6">
@@ -138,6 +139,7 @@
              <p class="appSubtext">-Buillt using html and css.</p>
              <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
              <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
+             <p class="appSubtext">-Live server deployed <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
          </div>
      </div>
     </div>
@@ -148,8 +150,9 @@
              <p class="appSubtext">-A complete weather app with live information.</p>
              <p class="appSubtext">-Built using html,css,js and ejs.</p>
              <p class="appSubtext">-Backend built using node.js,express.js.</p>
-             <p class="appSubtext">-Web app deployed on heroku.</p>
+             <p class="appSubtext">-Deployed on heroku and dockerised.</p>
              <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/WeatherApp">here</a></strong>.</p>
+             <p class="appSubtext">-Live server deployed <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
          </div>
      </div>
      <div class="col-lg-6">
@@ -160,6 +163,7 @@
           <p class="appSubtext">-Includes tailwind and bootstrap as framework.</p>
           <p class="appSubtext">-Backend built using node.js,express.js.</p>
           <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/PersonalPortfolio">here</a></strong>.</p>
+          <p class="appSubtext">-Live server deployed <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/SneakerSite">here</a></strong>.</p>
       </div>
   </div>
  </div>
