New projectys added in the project section.

--- a/html/project.html
+++ b/html/project.html
@@ -167,6 +167,37 @@
       </div>
   </div>
  </div>
+ <div class="row" data-aos="fade-left" data-aos-ease="linear" data-aos-duration="3000">
+    <div class="col-lg-6">
+        <div class="appText shadow-md rounded-lg h-18">
+            <h1 class="AppHeading">GROCERY MANAGER</h1>
+            <p class="appSubtext">-Grocery/Items manager which similar to one used by superstore.</p>
+            <p class="appSubtext">-Powefull app which use mysql database to manage items.</p>
+            <p class="appSubtext">-User authentication with encrypted password also provided with mysql.</p>
+            <p class="appSubtext">-Backend build using node and express.</p>
+            <p class="appSubtext">-Frontend build using html,css,js,ejs.</p>
+            <p class="appSubtext">-Database built using mysql.</p>
+            <p class="appSubtext">-Deployed on heroku.</p>
+            <p class="appSubtext">-Crud application.</p>
+            <p class="appSubtext">-Live preview of the web app is <strong><a class="no-underline hover:underline " href="https://shop-databasee.herokuapp.com">here</a></strong> .</p>
+            <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/GROCERY_MANAGER">here</a></strong>.</p>
+        </div>
+    </div>
+    <div class="col-lg-6">
+     <div class="appText shadow-md rounded-lg h-18">
+         <h1 class="AppHeading">TASKY</h1>
+         <p class="appSubtext">-Powerfull todo list app.</p>
+         <p class="appSubtext">-User authentication provided using mongodb.</p>
+         <p class="appSubtext">-Backend built by using node and express.</p>
+         <p class="appSubtext">-Frontend built using html,css,js and ejs.</p>
+         <p class="appSubtext">-Database build using mongodb.</p>
+         <p class="appSubtext">-Uses mongo atlas server for the database.</p>
+         <p class="appSubtext">-Database deployed on amazon web service on mumbai region.</p>
+         <p class="appSubtext">-Deployed on heroku.</p>
+         <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/PersonalPortfolio">here</a></strong>.</p>
+     </div>
+ </div>
+</div>
 </section>
 
 <!-- Database section added -:-->
@@ -197,6 +228,30 @@
       </div>
   </div>
       </div>
+      <div class="row" data-aos="fade-right" data-aos-ease="linear" data-aos-duration="3000">
+        <div class="col-lg-6">
+          <div class="appText shadow-md rounded-lg h-18">
+              <h1 class="AppHeading">GROCERY DATABASE</h1>
+              <p class="appSubtext">-Built using sql for a web app.</p>
+              <p class="appSubtext">-This is an online grocery/items database.</p>
+              <p class="appSubtext">-This is database is built for the grocery manager web app which is mentioned in the web deveelpment section.</p>
+              <p class="appSubtext">-Powerfull database which is consumed by powerfull and smart web app.</p>
+              <p class="appSubtext">-Live preview of the web app is <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/OnlineInventoryDatabase">here</a></strong> .</p>
+              <p class="appSubtext">-Source code available  <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/OnlineInventoryDatabase">here</a></strong>.</p>
+        </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="appText shadow-md rounded-lg h-18">
+          <h1 class="AppHeading">LIBRARY DATABASE</h1>
+          <p class="appSubtext">-Built using sql.</p>
+          <p class="appSubtext">-Inclues database which can be used by library.</p>
+          <p class="appSubtext">-This is a college project where we are developing library app where I handled the backend database part.</p>
+          <p class="appSubtext">-Ongoing project.</p>
+          <p class="appSubtext">-Live preview of the web app is <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/OnlineInventoryDatabase">here</a></strong> .</p>
+          <p class="appSubtext">-Source code available <strong><a class="no-underline hover:underline " href="https://github.com/SANKALP1011/LibraryDatabase">here</a></strong>.</p>
+    </div>
+</div>
+    </div>
  </section>
 
  <!-- Other project added -: -->
