--- a/project.html
+++ b/project.html
@@ -335,7 +335,7 @@
 <!-- Font awesome kit added -: -->
 <script src="https://kit.fontawesome.com/f4d4f77253.js" crossorigin="anonymous"></script>
 <!-- Canvas.js file for the animation added -: -->
-<script src="../js/canvas.js"></script>
+<script src="./canvas.js"></script>
 <!-- Scroll.js for scroll added -: -->
 <script src="../js/scroll.js"></script>
 <!-- Aos library added -: -->
