--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       AOS.init();
     </script>
   <!-- Canvas tag for background animation. -->
-  <script src="./canvas.js"></script>
+  <script src="canvas.js"></script>
   </body>
 
 </html>
