--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               motion-safe:hover:scale-110...
               col-lg-4
             " type="submit">
-          <a href="../html/project.html">Projects</a>
+          <a href="project.html">Projects</a>
         </button>
           </div>
         </div>
